[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "x-agent"
version = "0.1.0"
description = "X (Twitter) 智能运营 Agent"
requires-python = ">=3.10"

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "-v --tb=short --cov=modules --cov-report=term-missing --cov-fail-under=70"

[tool.coverage.run]
source = ["modules"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.pylint.messages_control]
disable = ["C0111", "R0903"]

[tool.pylint.format]
max-line-length = 100
